atualizando service